--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "packageManager": "yarn@3.2.3",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3"
   },
@@ -38,6 +39,9 @@
     "usehooks-ts@^2.7.2": "patch:usehooks-ts@npm:^2.7.2#./.yarn/patches/usehooks-ts-npm-2.7.2-fceffe0e43.patch"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.9.0",
     "lucide-react": "^0.292.0"
   }
 }
