--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
-    "lucide-react": "^0.292.0"
+    "lucide-react": "^0.292.0",
+    "recharts": "^2.10.4"
   }
 }
