--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -30,6 +30,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "recharts": "^2.10.4",
     "use-debounce": "^8.0.4",
     "usehooks-ts": "^2.7.2",
     "viem": "^1.16.6",
