--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,6 +16,12 @@
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
+    "@particle-network/aa": "^1.3.3",
+    "@particle-network/chains": "^1.3.18",
+    "@particle-network/connect-react-ui": "^1.2.1",
+    "@particle-network/connectkit": "^1.3.5",
+    "@particle-network/connectors": "^1.3.2",
+    "@particle-network/provider": "^1.3.2",
     "@rainbow-me/rainbowkit": "1.1.2",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
